k8s/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: zt-event-gateway
data:
  envoy.yaml: |
    node:
      id: zt-event-gateway
      cluster: zt-gateway

    static_resources:
      listeners:
        - name: ingress_http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: unified_entry
                      virtual_hosts:
                        - name: zt_event_gateway
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/api/"
                              route:
                                cluster: php_gateway
                                prefix_rewrite: "/"
                            - match:
                                prefix: "/rabbitmq/"
                              route:
                                cluster: rabbitmq_mgmt
                                prefix_rewrite: "/"
                            - match:
                                prefix: "/"
                              direct_response:
                                status: 404
                                body:
                                  inline_string: "Use /api/* or /rabbitmq/*"
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: php_gateway
          connect_timeout: 1s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: php_gateway
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: php-gateway
                          port_value: 8081

        - name: rabbitmq_mgmt
          connect_timeout: 1s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: rabbitmq_mgmt
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: rabbitmq
                          port_value: 15672

    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
