k8s/order-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db
  labels:
    app: order-db
spec:
  ports:
    - port: 5432
      name: tcp-postgresql
  selector:
    app: order-db
  clusterIP: None # Headless Service，適合 StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-db
spec:
  serviceName: "order-db"
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: postgres
          image: postgres:11.12
          ports:
            - containerPort: 5432
          env:
            - name: POSTGRES_DB
              value: "order"
            - name: POSTGRES_USER
              value: "root"
            - name: POSTGRES_PASSWORD
              value: "root"
          args: 
            - "postgres"
            - "-c"
            - "logging_collector=on"
            - "-c"
            - "log_destination=stderr"
            - "-c"
            - "max_connections=5000" # 配合 PgBouncer 或連線池
          volumeMounts:
            - name: order-db-data
              mountPath: /var/lib/postgresql/data/
  volumeClaimTemplates:
    - metadata:
        name: order-db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi # 生產環境視需求調整
