k8s/production-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-db
  labels:
    app: production-db
spec:
  ports:
    - port: 5432
      name: tcp-postgresql
  selector:
    app: production-db
  clusterIP: None # Headless service for StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: production-db
spec:
  serviceName: "production-db"
  replicas: 1
  selector:
    matchLabels:
      app: production-db
  template:
    metadata:
      labels:
        app: production-db
    spec:
      containers:
        - name: postgres
          image: postgres:11.12
          ports:
            - containerPort: 5432
          env:
            - name: POSTGRES_DB
              value: "production"
            - name: POSTGRES_USER
              value: "root"
            - name: POSTGRES_PASSWORD
              value: "root"
          args: ["postgres", "-c", "logging_collector=on", "-c", "log_destination=stderr", "-c", "max_connections=5000"]
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data/
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
