k8s/user-db.yaml
apiVersion: v1
kind: Secret
metadata:
  name: user-db-secret
  namespace: zt-event-gateway
type: Opaque
stringData:
  POSTGRES_DB: user
  POSTGRES_USER: root
  POSTGRES_PASSWORD: root
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  namespace: zt-event-gateway
spec:
  serviceName: user-db
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: postgres:11.12
          imagePullPolicy: IfNotPresent
          env:
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: user-db-secret
                  key: POSTGRES_DB
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: user-db-secret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: user-db-secret
                  key: POSTGRES_PASSWORD
          args:
            - -c
            - logging_collector=on
            - -c
            - log_destination=stderr
            - -c
            - max_connections=10000
          ports:
            - containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 20
            periodSeconds: 20
          volumeMounts:
            - name: user-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: user-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: zt-event-gateway
spec:
  selector:
    app: user-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
