k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: zt-event-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: IMAGE_USER_SERVICE
          imagePullPolicy: IfNotPresent
          workingDir: /app
          command:
            - /bin/bash
            - -c
            - chmod 776 ./start_service.sh && ./start_service.sh
          env:
            - name: WEB_DOCUMENT_ROOT
              value: /app/public
            - name: PHP_MEMORY_LIMIT
              value: "2048M"
            - name: PHP_MAX_EXECUTION_TIME
              value: "300"
            - name: PHP_POST_MAX_SIZE
              value: "2048M"
            - name: PHP_UPLOAD_MAX_FILESIZE
              value: "2048M"
            - name: DB_HOST
              value: user-db
            - name: DB_PORT
              value: "5432"
            - name: DB_DATABASE
              value: user
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: user-db-secret
                  key: POSTGRES_USER
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: user-db-secret
                  key: POSTGRES_PASSWORD
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: zt-event-gateway
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
